[package]
name = "market-mudcrab"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
bevy_egui = "0.32.0"
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
url = "2.5.4"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package.'*']
opt-level = 3
